--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eno",
+  "name": "Cashwyre",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -9,25 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^51.0.0",
-    "expo-constants": "~16.0.1",
+    "axios": "^1.7.5",
+    "expo": "^51.0.31",
+    "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.9",
-    "expo-splash-screen": "~0.27.4",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "nativewind": "^4.0.1",
+    "nativewind": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-reanimated": "3.10.0",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-reanimated": "3.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.0"
+    "react-native-web": "~0.19.12",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.2.79",
     "typescript": "~5.3.3"
   },
   "private": true
