--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cashwyre",
+  "name": "cashwyre",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -16,6 +16,7 @@
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "6.7.0",
     "nativewind": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
